# exercises

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exercise_01.cpp
02/: CMakeLists.txt  perzeptron.cpp
03/: CMakeLists.txt  MLP.cpp  README.md  training_set30.dat.txt
04/: ex04.tex
05/: ex05.bib  ex05.tex  function.gnu  learning.tex  outputxy.tex  tnn-error.gnu
PA-D/: RBF.cpp  trainRBF.pat
PA-E/: Main.java  MultiGas.java  Multi_Gas.java  PA-E.net
Sheet01/src/: sheet01.cpp
Sheet02/: README
Sheet02/src/: sheet02.cpp
artificial_life/Ex2/: .~lock.A12.ods#  A12.ods  A12.xlsx
artificial_life/Ex4/: 30.md
artificial_life/Ex5/: A33.csv  A33.py  A36.R  A36.md
artificial_life/Ex7/: 50.py
artificial_life/Ex8/: A51-54.md  A56.md
artificial_life/PAA/: 1R110.txt  1S110.txt  2S65816.txt  PPA.py
artificial_life/PAB/: DrawGrid.py  Grid.py  PAB.py  TorusGrid.py  draw.py  draw2.py  langton_ant_output.txt  test.txt
artificial_life/PAC/: PAC.py  plotter.gp  results.csv
artificial_life/PAD/: EA.py
artificial_life/automata/: ca.py
computer-vision/Sheet01/: README
computer-vision/Sheet01/src/: CMakeLists.txt  sheet01.cpp
computer_vision/Sheet01/src/: sheet01.cpp
computer_vision/Sheet02/: CMakeLists.txt
neural-networks/: exercise_01.cpp
neural-networks/03/: MLP.cpp
neural-networks/PA-E/: Multi_Gas.java
neural_networks/: README.md
neural_networks/03/: test_set30.dat.txt  test_set5.dat.txt  training_set5.dat.txt
neural_networks/04/: A23.tex
neural_networks/05/: PA-C.py  ex05.tex  outputlogx.tex  outputlogxy.tex  outputlogy.tex
neural_networks/PA-D/: CMakeLists.txt  RBF.cpp  README.md  trainRBF.pat
neural_networks/PA-E/: Main.java  PA-E.net
